@@ -1,52 +1,57 @@
-# - Module that perform release task.
-# This module provides common targets for release or post-release chores.
+# - Manage release by provides release related targets.
 #
-#  Defines following macros:
-#  MANAGE_RELEASE(releaseTargets)
-#  - Run release targets.
-#    This macro skips the missing targets so distro package maintainers
-#    do not have to get the irrelevant dependencies.
-#    For the "hard" requirement, please use cmake command
-#      "ADD_DEPENDENCIES".
-#    Arguments:
-#    + releaseTargets: Targets need to be done for a release.
-#      Note that sequence of the targets does not guarantee the
-#      sequence of execution.
-#    Defines following targets:
-#    + release: Perform everything required for a release.
-#      Reads following variables:
-#      + RELEASE_DEPENDS_FILES: List of files that the release depends.
-#        Note that the sequence of the target does not guarantee the
-#        sequence of execution.
+# Included Modules:
+#   - ManageMessage
+#   - ManageVariable
+#
+#  Defines following functions:
+#  MANAGE_RELEASE([<releaseTarget ...>] [DEPENDS <dependFile ...>])
+#    - Run release targets.
+#      This macro skips the missing targets so distro package maintainers
+#      do not have to get the irrelevant dependencies.
+#      For the "hard" dependency, use cmake command "ADD_DEPENDENCIES".
+#      * Parameters:
+#        - releaseTarget ...: Targets to be executed before a release.
+#          Note that sequence of the targets does not guarantee the
+#          sequence of execution.
+#        - DEPENDS dependFile ...: Files that target "release" depends on.
+#      * Defines following targets:
+#        - release: Perform everything required for a release.
 #
 
-IF(NOT DEFINED _MANAGE_RELEASE_CMAKE_)
-    SET(_MANAGE_RELEASE_CMAKE_ "DEFINED")
-    INCLUDE(ManageMessage)
+IF(DEFINED _MANAGE_RELEASE_CMAKE_)
+    RETURN()
+ENDIF(DEFINED _MANAGE_RELEASE_CMAKE_)
+SET(_MANAGE_RELEASE_CMAKE_ "DEFINED")
+INCLUDE(ManageMessage)
+INCLUDE(ManageVariable)
 
-    MACRO(MANAGE_RELEASE)
-	## Target: release
-	ADD_CUSTOM_TARGET(release
-	    DEPENDS ${RELEASE_DEPENDS_FILES}
-	    COMMENT "Releasing ${PROJECT_NAME}-${PRJ_VER}"
-	    )
+FUNCTION(MANAGE_RELEASE)
+    SET(_validOptions "DEPENDS")
+    VARIABLE_PARSE_ARGN(_o _validOptions ${ARGN})
+    SET(_releaseDependOptList "")
 
-	## Add dependent targets that actually exists
-	SET(_releaseTargets "")
-	FOREACH(_target ${ARGN})
-	    IF(TARGET ${_target})
-		LIST(APPEND _releaseTargets "${_target}")
-		## Release targets should be build after target tag
-		ADD_DEPENDENCIES(${_target} tag)
-	    ELSE(TARGET ${_target})
-		M_MSG(${M_OFF} "Target ${_target} does not exist, skipped.")
-	    ENDIF(TARGET ${_target})
-	ENDFOREACH(_target ${ARGN})
+    IF(NOT "${_o_DEPENDS}" STREQUAL "")
+	SET(_releaseDependOptList DEPENDS ${_o_DEPENDS})
+    ENDIF(NOT "${_o_DEPENDS}" STREQUAL "")
 
-	IF(_releaseTargets)
-	    ADD_DEPENDENCIES(release ${_releaseTargets})
-	ENDIF(_releaseTargets)
+    ## Target: release
+    ADD_CUSTOM_TARGET(release
+	${_releaseDependOptList}
+	COMMENT "release: ${PROJECT_NAME}-${PRJ_VER}"
+	)
 
-    ENDMACRO(MANAGE_RELEASE)
-ENDIF(NOT DEFINED _MANAGE_RELEASE_CMAKE_)
+    ## Add dependent targets that actually exists
+    SET(_releaseTargets "")
+    FOREACH(_target ${ARGN})
+	IF(TARGET ${_o})
+	    LIST(APPEND _releaseTargets "${_target}")
+	    ## Release targets should be build after target tag
+	    ADD_DEPENDENCIES(${_target} tag)
+	    ADD_DEPENDENCIES(release ${_target})
+	ELSE(TARGET ${_target})
+	    M_MSG(${M_OFF} "Target ${_target} does not exist, skipped.")
+	ENDIF(TARGET ${_target})
+    ENDFOREACH(_target ${ARGN})
+ENDFUNCTION(MANAGE_RELEASE)
 
