@@ -53,6 +53,8 @@ REDHAT_BUGZILLA=1002279,1093336
   + ManageFile: GIT_GLOB_TO_CMAKE_REGEX: Macro to function.
   + ManageString: STRING_ESCAPE_SEMICOLON: Macro to function.
   + ManageDependency: MANAGE_DEPENDENCY: Macro to function.
+  + ManageRelease: MANAGE_RELEASE: Macro to function.
+  + ManageRelease: MANAGE_RELEASE: Parameter changed.
   + PRJ_DOC_DIR: Changed from docdir/<PRJ_NAME>-<PRJ_VER> 
     to docdir/<PRJ_NAME>
 
